15740
Given the following source files:

`src/pack/Queue.java`
```scala
package pack;
public interface Queue { }
```


`src/pack/BlockingQueue.java`
```scala
package pack;
import java.util.Queue;
public interface BlockingQueue<E> extends Queue<E> { }
```

`src/pack/Test.scala`
```scala
package pack
trait Test {
  val b: BlockingQueue[Nothing]
}
```

feeding the three files into scalac gives the following error:
```scala
lamppc11:main luc$$ mkdir out
lamppc11:main luc$$ ~/scala/git/target/pack/bin/scalac src/pack/*.java src/pack/Test.scala 
src/pack/BlockingQueue.java:5: error: pack.Queue does not take type parameters
public interface BlockingQueue<E> extends Queue<E> {
                                          ^
one error found
```


In the supertype of `BlockingQueue`, `Queue` should resolve to `java.lang.Queue`, not to `pack.Queue`.

Compiling the java files first and feeding only the scala file to scalac works.
